--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1182,3 +1182,23 @@ body{
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
+
+
+/*
+------------------------------
+		COPYRIGHT
+------------------------------
+*/
+
+#copyright{
+	padding: 10px 0px;
+	font-family: 'Abel', sans-serif;
+	text-transform: uppercase;
+	font-size: 8px;
+	color: #eee;
+	background-color: #232323;
+}
+#copyright i{
+	color: #e33a6e;
+	margin: 0px 5px;
+}
