--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1192,9 +1192,9 @@ body{
 
 #copyright{
 	padding: 10px 0px;
-	font-family: 'Abel', sans-serif;
+	font-family: 'AleoLight', sans-serif;
 	text-transform: uppercase;
-	font-size: 8px;
+	font-size: 9px;
 	color: #eee;
 	background-color: #232323;
 }
