--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -39,6 +39,121 @@ body{
 
 /*
 ------------------------------
+		INICIO
+------------------------------
+*/
+
+#inicio{
+	padding: 80px 0px;
+	padding-bottom: 150px;
+	width: 100%;
+	height: 100%;	
+	background-image: url('../../img/bg_inicio.jpg');
+	background-color: red;
+	background-size: cover;
+	background-position: center;
+	color: #fff;
+	position: relative;
+}
+
+#inicio .sep_inicio_iz{
+	width: 50%;
+	height: 398px;
+	z-index: 0;
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+	background-image: url('../../img/separacion_inicio.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+#inicio .sep_inicio_de{
+	width: 50%;
+	height: 398px;
+	z-index: 0;
+	position: absolute;
+	bottom: 0px;
+	right: 0;
+	transform: scaleX(-1);
+	background-image: url('../../img/separacion_inicio.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+#inicio .carrera{
+	transform: rotate(-5deg);
+}
+#inicio .sub{
+	font-size: 36px;
+	font-family: "AleoBold";
+	font-style: italic;
+	margin-left: -350px;
+}
+#inicio .titulo{
+	font-size: 69px;
+	text-transform: uppercase;
+	font-family: "PierBlackItalic";
+	line-height: 70px;
+	margin-left: -200px;
+	color: #f1c40f;
+}
+	#inicio .titulo span{
+		margin-left: 350px;
+	}
+
+#inicio .info_carrera{
+	margin-top: 50px;
+	font-family: 'AleoLight';
+	font-size: 18px;
+}
+
+#inicio .logos{
+	margin-top: 50px;
+}
+#inicio .logos img{
+	height: 47px;
+}
+
+#inicio .icon-scroll,
+#inicio .icon-scroll:before{
+  position: absolute;
+  left: 50%;
+}
+
+#inicio .icon-scroll{
+  width: 20px;
+  height: 30px;
+  margin-top: 20px;
+  box-shadow: inset 0 0 0 1px #fff;
+  border-radius: 25px;
+}
+
+#inicio .icon-scroll:before{
+  content: '';
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  margin-left: -2px;
+  top: 8px;
+  border-radius: 4px;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: scroll;
+}
+
+@keyframes scroll{
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+
+/*
+------------------------------
 		DISEÑO 3D
 ------------------------------
 */
