--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1101,6 +1101,150 @@ body{
 
 /*
 ------------------------------
+		GALERIA
+------------------------------
+*/
+
+#galeria{
+	position: relative;
+	height: 1200px;
+	padding: 50px 0px;
+	background-image: url('../../img/bg_gallery.png');
+}
+
+#galeria .sub{
+	font-family: "AleoBold";
+	font-style: italic;
+	font-size: 36px;
+	transform: rotate(-5deg);
+}
+
+#galeria .resaltado{
+	color: #5ac2b7;
+}
+
+#galeria .titulo{
+	font-family: "PierBlackItalic";
+	font-size: 69px;
+	text-transform: uppercase;
+	transform: rotate(-5deg);
+	line-height: 40px;
+}
+
+#galeria .piso{
+	background-image: url('../../img/piso.png');
+	width: 100%;
+	height: 164px;
+	position: absolute;
+	bottom: -100px;
+}
+
+#galeria .soga-uno:before{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 205px;
+	top: 130px;
+	left: 0px;
+	background-image: url('../../img/soga.png');
+}
+
+#galeria .polaroid{
+	position: absolute;
+	background-color: #f8f4e8;
+	height: 240px;
+	width: 200px;
+	padding: 15px;
+	box-shadow: 8px 8px 5px 0px rgba(0,0,0,.1);
+}
+
+#galeria .polaroid:before{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url('../../img/patron.png');
+	opacity: .2;
+	z-index: 5;
+}
+
+#galeria .polaroid .muestra:before{
+	content: '';
+	position: absolute;
+	top: -40px;
+	left: 80px;
+	height: 50px;
+	width: 40px;
+	background-image: url('../../img/broche.png');
+	background-size: cover;
+	z-index: 6;
+}
+
+#galeria .polaroid .muestra{
+	background-image: url('../../paginas/nosotros.jpg');
+	background-size: cover;
+	background-position: center;
+	height: 170px;
+	width: 170px;
+}
+
+#galeria .soga-uno .col-sm-3:nth-child(1) .polaroid{
+	top: 100px;
+	transform: rotate(15deg);
+}
+
+#galeria .soga-uno .col-sm-3:nth-child(2) .polaroid{
+	transform: rotate(8deg);
+	top: 160px;
+}
+
+#galeria .soga-uno .col-sm-3:nth-child(3) .polaroid{
+	transform: rotate(2deg);
+	top: 190px;
+}
+
+#galeria .soga-uno .col-sm-3:nth-child(4) .polaroid{
+	transform: rotate(-2deg);
+	top: 195px;
+}
+
+#galeria .soga-dos:before{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 205px;
+	top: 530px;
+	right: 0px;
+	background-image: url('../../img/soga.png');
+	transform: scaleX(-1);
+}
+
+#galeria .soga-dos .col-sm-3:nth-child(1) .polaroid{
+	top: 590px;
+	transform: rotate(2deg);
+}
+
+#galeria .soga-dos .col-sm-3:nth-child(2) .polaroid{
+	transform: rotate(-2deg);
+	top: 590px;
+}
+
+#galeria .soga-dos .col-sm-3:nth-child(3) .polaroid{
+	transform: rotate(-8deg);
+	top: 570px;
+}
+
+#galeria .soga-dos .col-sm-3:nth-child(4) .polaroid{
+	transform: rotate(-15deg);
+	top: 515px;
+}
+
+
+
+/*
+------------------------------
 		NOSOTROS
 ------------------------------
 */
