--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -49,7 +49,6 @@ body{
 	width: 100%;
 	height: 100%;	
 	background-image: url('../../img/bg_inicio.jpg');
-	background-color: red;
 	background-size: cover;
 	background-position: center;
 	color: #fff;
@@ -981,6 +980,7 @@ body{
 	color: #fff;
 	background-image: url('../../img/bg_viruska.jpg');
 	background-size: cover;
+	z-index: 1;
 }
 #viruska .separacion_viruska_sup{
 	width: 100%;
@@ -1107,9 +1107,15 @@ body{
 
 #galeria{
 	position: relative;
-	height: 1200px;
-	padding: 50px 0px;
+	height: 1500px;
+	padding: 300px 0px;
+	margin-top: -130px;
 	background-image: url('../../img/bg_gallery.png');
+}
+
+#galeria .cabecera{
+	margin-top: -70px;
+	margin-bottom: 70px;
 }
 
 #galeria .sub{
@@ -1144,7 +1150,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 205px;
-	top: 130px;
+	top: 382px;
 	left: 0px;
 	background-image: url('../../img/soga.png');
 }
@@ -1215,7 +1221,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 205px;
-	top: 530px;
+	top: 781px;
 	right: 0px;
 	background-image: url('../../img/soga.png');
 	transform: scaleX(-1);
