--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -815,12 +815,14 @@ body{
 	}
 		#videos .amarillo{
 			color: #f1c40f;
+			/*text-transform: uppercase;*/
+			font-family: "PierBold"
 		}
 	#videos .texto_explicacion{
-		font-size: 33px;
+		font-size: 18px;
 		margin-top: 100px;
 		font-weight: 300;
-		line-height: 35px;
+		/*line-height: 35px;*/
 	}
 
 #videos .explicacion_corto{
@@ -1143,6 +1145,16 @@ body{
 	height: 164px;
 	position: absolute;
 	bottom: -100px;
+	z-index: 2;
+}
+
+#galeria .color{
+	position: absolute;
+	width: 100%;
+	height: 164px;
+	bottom: -100px;
+	background-color: #262626;
+	z-index: 1;
 }
 
 #galeria .soga-uno:before{
@@ -1249,6 +1261,7 @@ body{
 
 
 
+
 /*
 ------------------------------
 		NOSOTROS
@@ -1256,11 +1269,11 @@ body{
 */
 
 #nosotros{
-	height: 650px;
+	height: 780px;
 	padding: 50px 0px;
+	padding-top: 150px;
 	background-color: #292929;
 	background-image: url('../../img/patron.png');
-	
 }
 
 #nosotros h1{
@@ -1284,52 +1297,47 @@ body{
 }
 
 #nosotros .cont-caras{
-	margin-top: 200px;
+	margin-top: 150px;
 	color: white;
 	transform: scale(.9);
 	padding-top: 20px;
-}
-
-#nosotros .cont-caras .cont-img .apodo{
-	font-family: "PierBlack";
-	color: #908882;
-	font-size: 110px;
-	position: absolute;
-	top: -90px;
-	opacity: .5;
-	left: -10px;
-	text-transform: uppercase;
-	filter: blur(0px);
-	transition: all 0.1s ease 0s;
-}
-
-#nosotros .joni .apodo{
-	left: 20px !important;
-}
-
-#nosotros .cont-caras .cont-img:hover .apodo{
-	filter: blur(8px);
 }
 
 #nosotros .cont-img{
 	position: relative;
 	width: 100%;
 	height: 100px;
-	/*z-index: 3;*/
+}
+
+#nosotros .cont-img .apodo{
+	position: absolute;
+	font-size: 90px;
+	font-family: "PierBlack";
+	color: #504D4B;
+	z-index: -1;
+	top: -80px;
+	left: 160px;
+	text-transform: uppercase;
+}
+
+#nosotros .gaston .cont-img .apodo{
+	left: 80px;
+}
+
+#nosotros .cont-img img{
+	position: absolute;
+	transition: all 0.11s ease 0s;
 }
 
 #nosotros .cont-img .blur{
-	filter: blur(3px);
-	opacity: 1;
-	transition: all 0.3s ease 0s;
-}
-
-#nosotros .cont-img .color{
-	opacity: 0;
-	transition: all 0.3s ease 0s;
+	filter: blur(5px);
 }
 
 #nosotros .cont-img:hover .blur{
+	filter: blur(0px);
+}
+
+#nosotros .cont-img .color{
 	opacity: 0;
 }
 
@@ -1337,22 +1345,87 @@ body{
 	opacity: 1;
 }
 
-#nosotros .cont-img:hover + .cont-info{
-	filter: blur(3px);
+#nosotros .gaston .cont-img img{
+	left: 150px;
+} 
+
+#nosotros .gaston .cont-img .alas{
+	position: absolute;
+	transform: scale(.7);
+	left: -160px;
+	top: -80px;
+	opacity: 0;
+	transition: all 0.1s ease 0s;
 }
 
-#nosotros .cont-img:hover + .cont-info .profesion{
-	filter: grayscale(1);
+#nosotros .gaston .cont-img:hover .alas{
+	opacity: 1;
+	animation-name: alas;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
-#nosotros .cont-caras .cont-info{
-	position: relative;
-	z-index: 2;
-	width: 150px;
-	display: inline-block;
-	bottom: -70px;
-	right: 20px;
-	transition: all 0.3s ease 0s;
+@keyframes alas {
+    0%{margin-top: 20px;}
+    50%{margin-top: 0px;}
+    100%{margin-top: 20px;}
+}
+
+#nosotros .joni .cont-img img{
+	right: 150px;
+} 
+
+#nosotros .joni .cont-img .parche{
+	position: absolute;
+	transform: scale(.27);
+	top: -5px;
+	right: -145px;
+	opacity: 0;
+	transition: all 0.1s ease 0s;
+}
+
+#nosotros .joni .cont-img:hover .parche{
+	opacity: 1;
+}
+
+#nosotros .joni .cont-img .pirata{
+	position: absolute;
+	height: 130px;
+	top: -50px;
+	right: 140px;
+	opacity: 0;
+	transition: all 0.1s ease 0s;
+}
+
+#nosotros .joni .cont-img:hover .pirata{
+	opacity: 1;
+	animation-name: pirata;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes pirata {
+    0%{transform: rotate(5deg);}
+    50%{transform: rotate(0deg);}
+    100%{transform: rotate(5deg);}
+}
+
+#nosotros img{
+	height: 350px;
+}
+
+#nosotros .cont-info{
+	position: absolute;
+	bottom: -230px;
+	transition: all 0.1s ease 0s;
+}
+
+#nosotros .gaston .cont-info{
+	left: 80px;
+}
+
+#nosotros .joni .cont-info{
+	right: 100px;
 }
 
 #nosotros .cont-caras .cont-info .nombre{
@@ -1367,93 +1440,17 @@ body{
 	color: #a59385;
 }
 
-#nosotros .cont-caras .gaston img{
-	position: absolute;
-	height: 250px;
-	right: 25%;
-	z-index: 1;
+#nosotros .cont-img:hover .apodo{
+	filter: blur(4px);
 }
 
-#nosotros .cont-caras .gaston .cont-info{
-	right: 35px;
+#nosotros .cont-img:hover + .cont-info{
+	filter: blur(3px);
 }
 
-#nosotros .cont-caras .gaston .cont-img .alas{
-	position: absolute;
-	z-index: 4;
-	transform: scale(.7);
-	right: -130px;
-	top: -65px;
-	opacity: 0;
-	transition: all 0.1s ease 0s;
+#nosotros .cont-img:hover + .cont-info .profesion{
+	filter: grayscale(1);
 }
-
-#nosotros .cont-caras .gaston .cont-img:hover .alas{
-	opacity: 1;
-	animation-name: alas;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-
-@keyframes alas {
-    0%{margin-top: 20px;}
-    50%{margin-top: 0px;}
-    100%{margin-top: 20px;}
-}
-
-#nosotros .cont-caras .joni{
-	margin-top: -120px;
-}
-
-#nosotros .cont-caras .joni img{
-	position: absolute;
-	left: 25%;
-	z-index: 1;
-}
-
-#nosotros .cont-caras .joni .cont-img .parche{
-	position: absolute;
-	z-index: 4;
-	left: 110px;
-	top: 95px;
-	opacity: 0;
-	transition: all 0.1s ease 0s;
-}
-
-#nosotros .cont-caras .joni .cont-img:hover .parche{
-	opacity: 1;
-	
-}
-
-@keyframes parche {
-    0%{transform: rotate(5deg);}
-    50%{transform: rotate(0deg);}
-    100%{transform: rotate(5deg);}
-}
-
-#nosotros .cont-caras .joni .cont-img .pirata{
-	position: absolute;
-	z-index: 4;
-	left: 100px;
-	height: 90px;
-	top: -30px;
-	opacity: 0;
-	transition: all 0.1s ease 0s;
-}
-
-#nosotros .cont-caras .joni .cont-img:hover .pirata{
-	opacity: 1;
-	animation-name: parche;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-
-
-/*
-------------------------------
-		COPYRIGHT
-------------------------------
-*/
 
 #copyright{
 	padding: 10px 0px;
