--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1201,7 +1201,7 @@ body{
 }
 
 #galeria .polaroid .muestra{
-	background-image: url('../../paginas/nosotros.jpg');
+	background-color: #ccc;
 	background-size: cover;
 	background-position: center;
 	height: 170px;
