--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -123,7 +123,7 @@ body{
 #inicio .icon-scroll{
   width: 20px;
   height: 30px;
-  margin-top: 20px;
+  margin-top: 70px;
   box-shadow: inset 0 0 0 1px #fff;
   border-radius: 25px;
 }
@@ -226,7 +226,7 @@ body{
 			#video3d .texto_video3d span:nth-child(4){
 				font-size: 82px;
 				margin-top: 150px;
-				margin-left: -50px;
+				margin-left:  -30px;
 			}
 			#video3d .texto_video3d span:nth-child(5){
 				font-size: 242px;
@@ -815,8 +815,9 @@ body{
 	}
 		#videos .amarillo{
 			color: #f1c40f;
-			/*text-transform: uppercase;*/
-			font-family: "PierBold"
+			text-transform: uppercase;
+			font-family: "PierBold";
+			font-style: italic;
 		}
 	#videos .texto_explicacion{
 		font-size: 18px;
@@ -1171,10 +1172,12 @@ body{
 #galeria .polaroid{
 	position: absolute;
 	background-color: #f8f4e8;
-	height: 240px;
+	height: 245px;
 	width: 200px;
 	padding: 15px;
 	box-shadow: 8px 8px 5px 0px rgba(0,0,0,.1);
+	text-decoration: none;
+	outline: 0;
 }
 
 #galeria .polaroid:before{
@@ -1260,6 +1263,11 @@ body{
 	top: 515px;
 }
 
+#galeria .nombre_alumno{
+	margin-top: 5px;
+	font-size: 16px;
+	color: rgba(100, 100, 100, .7);
+}
 
 #galeria .modal-content{
 	background-color: transparent;
